# lgu2-www-django

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  admin.py  api.py  db.sqlite3  gunicorn.conf.py  manage.py  models.py  poetry.toml  pyproject.toml  requirements.txt  settings.py  urls.py  views.py
.ebextensions/: django.config
.github/workflows/: deploy.yml  lint.yml
api/: browse.py  contents.py  metadata.py  server.py
docs/: status_messages.md
docs/adr/: 2026-04-27-status-messaging-architecture.md  2026-05-18-timeline-enacted-made-visibility.md
lgu2/: admin.py  asgi.py  models.py  settings.py  status.py  urls.py  wsgi.py
lgu2/api/: associated.py  browse.py  browse_types.py  contents.py  dates.py  doc_types.py  document.py  documents.py  effects.py  explore_collection.py  fragment.py  health_check.py  metadata.py  pdf.py  search.py  search_types.py  server.py  wagtail_api.py
lgu2/messages/: status.py
lgu2/middleware/: central_logging.py  robots_middleware.py  upstream_errors.py
lgu2/migrations/: 0001_footer_and_about_us.py  0001_initial.py  0002_aboutuspage.py  0002_alter_message_name.py  0002_statusmessages.py  0003_alter_footer_copyright_statement_cy_and_more.py  0003_datasetcompleteness.py  0004_remove_footer_eur_lex_link_remove_footer_logo_image_and_more.py  0006_delete_aboutuspage.py  0007_aboutuspage.py  0008_aboutuspage_introduction_part2_subheading_2.py  0009_aboutuspagesubsection.py  0010_remove_aboutuspage_bullet_list_subheading_2_and_more.py  0011_aboutuspage_latest_revision_and_more.py  (+1 more)
messages/: status.py
migrations/: 0001_initial.py
static/: primary.css
templates/: 404.html  base.html  browse.html  document.html  document2.html  main_nav.html  paged_nav.html  timeline.html  top_banner.html
views/: __init__.py  browse.py  document.py  metadata.py
(+218 files in other folders)
