[tool.poetry]
name = "lgu2"
version = "0.1.0"
description = "a front-end for legislation.gov.uk v2"
package-mode = false
authors = ["Jim Mangiafico <jim@jurisdatum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
requests = "^2.32.3"
django-environ = "^0.11.2"

gunicorn = "^22.0.0" # WSGI server used in containerized deployment
whitenoise = "^6.7.0" # Optional: serve app static assets in-container (enabled via USE_WHITENOISE)

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
