[tool.poetry]
name = "lgu2"
version = "0.1.0"
description = "a front-end for legislation.gov.uk v2"
package-mode = false
authors = ["Jim Mangiafico <jim@jurisdatum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
requests = "^2.32.3"
django-environ = "^0.13.0"

gunicorn = "^22.0.0" # WSGI server used in containerized deployment
whitenoise = "^6.7.0" # Optional: serve app static assets in-container (enabled via USE_WHITENOISE)

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
flake8 = "^7.3.0"
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
